--- a/style.css
+++ b/style.css
@@ -67,6 +67,10 @@ border-radius: 5px;
 input:last-child{
     margin-bottom: 24px;
 }
+::placeholder{
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+margin-left: 7px;
+}
 
 .prosseguirBotao{
     display: flex;
@@ -149,6 +153,43 @@ color: #000000;
     margin-left: 197px;
     width: 26px;
     height: 23px;
+}
+/*final da tela 3.2*/
+/*inicio da tela 3.3*/
+
+.container_Niveis{
+    background-color: #FFFFFF;
+}
+.MontarNiveis h3{
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+font-size: 20px;
+font-weight: 700;
+line-height: 23.44px;
+color: #000000;
+margin-left: 17px;
+}
+.MontarNiveis input{
+margin-left: 16px;
+}
+textarea{
+border: 1px solid #D1D1D1;
+box-sizing: border-box;
+border-radius: 5px;
+height: 177px;
+width: 341px;
+margin-top: 9px;
+margin-left: 17px;
+}
+.mudarPosicao{
+    margin-bottom: 28px;
+}
+.bloco{
+    width: 26px;
+    height: 23px;
+    
+}
+.distanciar{
+    margin-top: 14px;
 }
 
 /*aqui vou colocar a classe escondido ( Diegão disse que é bom deixar no final do css)*/
