--- a/style.css
+++ b/style.css
@@ -191,7 +191,38 @@ margin-left: 17px;
 .distanciar{
     margin-top: 14px;
 }
-
+/*fim da tela 3.3*/
+/* inicio da tela 3.4*/
+     /*Mudar o background de tudo pra  #FAFAFA (isso o js faz)  e mudar o tamanho do botão(diminuir)*/
+.text p {
+    color: #FFFFFF;
+    display: flex;
+    position: relative;
+    justify-content: flex-start;
+    bottom: 0;
+    align-items: flex-end;
+}
+.text{
+    background: url("img/Rectangle\ 36.png");
+    width: 340px;
+    height: 181px;
+    border-radius: 5px;
+    margin-left: 18px;
+    
+}
+h4{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 78px;
+    background-color: #FAFAFA;
+    color: #818181;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    width: 219.64px;
+    height: 44px;
+    font-size: 18px;
+    font-weight: 400;
+}
 /*aqui vou colocar a classe escondido ( Diegão disse que é bom deixar no final do css)*/
 .escondido{
     display: none;
