--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ h2{
    margin-top: 29px;
     display: block;
     padding-left: 16px;
+    align-items: center;
 
 }
 input:first-child{
@@ -63,9 +64,13 @@ border: 1px solid #D1D1D1;
 box-sizing: border-box;
 border-radius: 5px;
 
+
 }
 input:last-child{
     margin-bottom: 24px;
+}
+.redBackground{
+    background-color:  #FFE9E9;;
 }
 ::placeholder{
 font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -222,6 +227,13 @@ h4{
     height: 44px;
     font-size: 18px;
     font-weight: 400;
+}
+/*tela bônus da DUDA*/
+h6{
+    color: #EC362D;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+    margin-top: 3px;
 }
 /*aqui vou colocar a classe escondido ( Diegão disse que é bom deixar no final do css)*/
 .escondido{
