--- a/style.css
+++ b/style.css
@@ -13,7 +13,10 @@ header{
 
 }
 main{
-    margin-top: 99px;
+    margin-top: 70px;
+    padding-top: 30px;
+    display: flex;
+    flex-direction: column;
 }
 
 h1{
@@ -31,14 +34,15 @@ line-height: 43.36px;
     background-color:#FAFAFA;
 }
 .container{
-    display:block;
+    display:flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     
 }
 h2{
-    margin-top: 37px;
-    margin-left: 27%;
+    
+   
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 20px;
     font-weight: 700;
@@ -64,6 +68,8 @@ box-sizing: border-box;
 border-radius: 5px;
 }
 input{
+    display: flex;
+    flex-direction: column;
 margin-top: 9px;
 height: 46px;
 width: 341px;
