--- a/style.css
+++ b/style.css
@@ -12,11 +12,15 @@ header{
     box-shadow:  0px 4px 4px 0px #00000040;
 
 }
+body{
+    background-color:#FAFAFA;
+}
 main{
     margin-top: 70px;
     padding-top: 30px;
     display: flex;
     flex-direction: column;
+    background-color:#FAFAFA;
 }
 
 h1{
@@ -38,6 +42,7 @@ line-height: 43.36px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    
     
 }
 h2{
