so alterei o css

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ line-height: 43.36px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    
+    background-color:#FAFAFA;
     
 }
 h2{
