--- a/style.css
+++ b/style.css
@@ -237,7 +237,8 @@ h4{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 78px;
+    flex-direction: column;
+    margin-left: 3%;
     background-color: #FAFAFA;
     color: #818181;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -253,6 +254,7 @@ h6{
     font-size: 14px;
     margin-top: 3px;
 }
+
 /*aqui vou colocar a classe escondido ( Diegão disse que é bom deixar no final do css)*/
 .escondido{
     display: none;
