--- a/style.css
+++ b/style.css
@@ -36,6 +36,10 @@ line-height: 43.36px;
 
 .containerMain{
     background-color:#FAFAFA;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 .container{
     display:flex;
@@ -123,8 +127,12 @@ p{
 .MontarPerguntas{
     background-color: #FFFFFF;
    margin-top: 29px;
-    display: block;
+   width: 375PX;
     padding-left: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     
 }
 .MontarPerguntas h3{
