--- a/style.css
+++ b/style.css
@@ -15,6 +15,13 @@ header{
 body{
     background-color:#FAFAFA;
 }
+input::placeholder{
+    margin-left: 5px;
+    font-size: 19px;
+    font-style: italic;
+    color: #BABABA;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 main{
     margin-top: 70px;
     padding-top: 30px;
