--- a/style.css
+++ b/style.css
@@ -22,6 +22,13 @@ input::placeholder{
     color: #BABABA;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+textarea::placeholder{
+    margin-left: 5px;
+    font-size: 19px;
+    font-style: italic;
+    color: #BABABA;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 main{
     margin-top: 70px;
     padding-top: 30px;
