--- a/style.css
+++ b/style.css
@@ -16,14 +16,16 @@ body{
     background-color:#FAFAFA;
 }
 input::placeholder{
-    margin-left: 5px;
+    margin-left: 14px;
     font-size: 19px;
     font-style: italic;
     color: #BABABA;
+    line-height: 22.27px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 textarea::placeholder{
-    margin-left: 5px;
+    margin-left: 14px;
+    line-height: 22.27px;
     font-size: 19px;
     font-style: italic;
     color: #BABABA;
