--- a/style.css
+++ b/style.css
@@ -248,9 +248,9 @@ margin-left: 17px;
     color: #FFFFFF;
     display: flex;
     position: relative;
-    justify-content: flex-start;
+    justify-content: flex-end;
     bottom: 0;
-    align-items: flex-end;
+    align-items: flex-start;
 }
 .text{
     background: url("img/Rectangle\ 36.png");
