--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -96,7 +96,10 @@ h5 {
     width: 340px;
     height: 181px;
     right: 17px;
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
     background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 64.58%, #000000 100%), url(image.png);
     border-radius: 5px;
 }
